--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -32,6 +33,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -39,6 +41,7 @@
     "cmdk": "^1.1.1",
     "electron-pos-printer": "^1.3.7",
     "electron-updater": "^6.3.9",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "node-thermal-printer": "^4.4.5",
     "react-hook-form": "^7.55.0",
