--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.10",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-toast": "^1.2.6",
-    "@tanstack/react-query-devtools": "^4.36.1",
+    "@tanstack/react-query": "^5.74.11",
+    "@tanstack/react-query-devtools": "^5.74.11",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -45,7 +47,6 @@
     "lucide-react": "^0.487.0",
     "node-thermal-printer": "^4.4.5",
     "react-hook-form": "^7.55.0",
-    "react-query": "^3.39.3",
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
     "tailwind-merge": "^3.2.0",
