--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.10",
     "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.6",
     "@tanstack/react-query": "^5.74.11",
     "@tanstack/react-query-devtools": "^5.74.11",
@@ -45,13 +47,17 @@
     "electron-updater": "^6.3.9",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
+    "next-themes": "^0.4.6",
     "node-thermal-printer": "^4.4.5",
+    "react-datepicker": "^8.4.0",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
