CASI PARA PRODUCCION

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_BACK_URL=https://api.mi-tenant.com/api
-# PRELOAD_VITE_BACK_URL=https://api.mi-tenant.com
+VITE_BACK_URL=http://localhost:4000
+VITE_API_PATH=/api
