--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -13,6 +13,8 @@ asarUnpack:
   - resources/**
 win:
   executableName: carrito-burgers
+  target: nsis
+  sign: false
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
@@ -38,6 +40,6 @@ linux:
 appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
-publish:
-  provider: generic
-  url: https://example.com/auto-updates
+# publish:
+#   provider: generic
+#   url: https://example.com/auto-updates
