--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "food-magaments",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An Electron application with React and TypeScript",
-  "main": "./out/main/index.js",
+  "main": "./dist/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
   "scripts": {
@@ -14,6 +14,7 @@
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
+    "build:win-publish": "npm run build && electron-builder --win --publish always",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
@@ -30,6 +31,11 @@
         "repo": "Electron-pedidos"
       }
     ],
+    "win": {
+      "target": "nsis",
+      "signAndEditExecutable": false,
+      "sign": false
+    },
     "files": [
       "dist/",
       {
