--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "electron-pos-printer": "^1.3.7",
     "electron-updater": "^6.3.9",
     "jwt-decode": "^4.0.0",
