--- a/package.json
+++ b/package.json
@@ -72,11 +72,12 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "electron-pos-printer": "^1.3.7",
+    "electron-printer": "^0.0.5",
     "electron-updater": "^6.3.9",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
-    "node-thermal-printer": "^4.4.5",
+    "node-thermal-printer": "^4.5.0",
     "react-datepicker": "^8.4.0",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.5.0",
