--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "next-themes": "^0.4.6",
     "node-thermal-printer": "^4.5.0",
     "react-datepicker": "^8.4.0",
+    "react-day-picker": "^9.9.0",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
