--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-VITE_BACK_URL=http://localhost:4000
+VITE_BACK_URL=https://food-management-backend-production.up.railway.app/
 VITE_API_PATH=/api
+VITE_API_KEY=apikey_starktwo_123
