--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "julibosch",
+        "owner": "Julian Bosch y Estefano Bugari",
         "repo": "food-management"
       }
     ],
@@ -73,6 +73,7 @@
     "date-fns": "^4.1.0",
     "electron-pos-printer": "^1.3.7",
     "electron-printer": "^0.0.5",
+    "electron-store": "^11.0.2",
     "electron-updater": "^6.3.9",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
