--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "food-management",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Food Management - Sistema de gestión de pedidos para restaurantes",
   "main": "./dist/main/index.js",
   "author": "Food Management Team",
@@ -27,8 +27,8 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "Julian Bosch y Estefano Bugari",
-        "repo": "food-management"
+        "owner": "estefano99",
+        "repo": "Electron-pedidos"
       }
     ],
     "win": {
@@ -72,7 +72,6 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "electron-pos-printer": "^1.3.7",
-    "electron-printer": "^0.0.5",
     "electron-store": "^11.0.2",
     "electron-updater": "^6.3.9",
     "jwt-decode": "^4.0.0",
